--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -10,5 +10,8 @@ html {
 *::after {
   box-sizing: inherit;
 }
+
 @import "build/bootstrap/scss/mixins/grid-framework";
 @import "build/bootstrap/scss/grid";
+@import "build/bootstrap/scss/utilities/display";
+@import "build/bootstrap/scss/utilities/flex";
