--- a/src/scss/module/_grid.scss
+++ b/src/scss/module/_grid.scss
@@ -7,11 +7,15 @@ $enable-grid-classes: utils.$enable-grid-classes;
 $enable-deprecation-messages : false;
 $grid-breakpoints: map.get($xl-tokens, grid, breakpoint);
 $grid-gutter-width: map.get($xl-tokens, grid, gutter);
-$container-max-widths: ();
-@each $size, $val in map.keys(map.get($xl-tokens, grid , container-max-width)) {
-  $container-max-widths: map.set($container-max-widths, $size, map.get($xl-tokens, grid ,container-max-width ,$size))
-}
-@debug $container-max-widths;
+$container-max-widths: map.get($xl-tokens, grid, container-max-width);
+
+$spacers : (
+  0: 0,
+  1: token-value(spacer sm),
+  2: token-value(spacer md),
+  3: token-value(spacer lg),
+  4: token-value(spacer xl),
+);
 
 @import "bootstrap/scss/mixins/breakpoints";
 @import "bootstrap/scss/mixins/grid";
