--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -13,6 +13,10 @@ html {
 
 @import "build/bootstrap/scss/mixins/grid-framework";
 @import "build/bootstrap/scss/grid";
-@import "build/bootstrap/scss/utilities/display";
-@import "build/bootstrap/scss/utilities/flex";
-@import "build/bootstrap/scss/utilities/spacing";
+
+// Décommenter ces lignes pour ajouter les classes utilitaires bootstrap précédées de « qc- »,
+// selon le même principe que pour la grille.
+// ex: mt-lg-4 -> qc-mt-lg-4, d-sm-flex -> qc-d-sm-flex, d-md-none, qc-d-md-none
+//@import "build/bootstrap/scss/utilities/display";
+//@import "build/bootstrap/scss/utilities/flex";
+//@import "build/bootstrap/scss/utilities/spacing";
