- renommage de dossiers - nettoyage

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,5 +1,5 @@
-@use "module/tokens" as *;
-@use "module/utils" as *;
+@use "modules/tokens" as *;
+@use "modules/utils" as *;
 @use "sass:map";
 @use "sass:list";
 
