--- a/src/scss/modules/_utils.scss
+++ b/src/scss/modules/_utils.scss
@@ -1,7 +1,7 @@
-@use "function/utils" as *;
+@use "functions/utils" as *;
 @use "tokens" as *;
 @forward "settings/settings";
-@forward "function/utils";
+@forward "functions/utils";
 
 // typography
 
