--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,6 +1,6 @@
-@use "module/utils" as *;
-@use "module/tokens" as *;
-@use "module/map" as *;
+@use "modules/utils" as *;
+@use "modules/tokens" as *;
+@use "modules/map" as *;
 @use "sass:map";
 
 $colors : (color : map.get($xl-tokens, color));
