--- a/src/scss/_figure.scss
+++ b/src/scss/_figure.scss
@@ -1,5 +1,5 @@
-@use "module/tokens" as *;
-@use "module/utils" as *;
+@use "modules/tokens" as *;
+@use "modules/utils" as *;
 
 .qc-gallery {
   overflow: hidden;
