--- a/src/scss/qc-design-tokens.scss
+++ b/src/scss/qc-design-tokens.scss
@@ -1,6 +1,6 @@
-@use "module/tokens" as *;
-@use "module/map" as *;
-@use "module/grid" as *;
+@use "modules/tokens" as *;
+@use "modules/map" as *;
+@use "modules/grid" as *;
 
 :root {
 
