--- a/src/scss/settings/_tokens.scss
+++ b/src/scss/settings/_tokens.scss
@@ -1,6 +1,6 @@
 @use "settings/settings" as *;
-@use "function/utils" as *;
-@use "function/tokens" as *;
+@use "functions/utils" as *;
+@use "functions/tokens" as *;
 
 $dark-blue : #223654;
 $xl-tokens: (
