--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -11,7 +11,7 @@ html {
   box-sizing: inherit;
 }
 
-@import "build/bootstrap/scss/grid";
+@import "lib/bootstrap/scss/grid";
 
 // Décommenter ces lignes pour ajouter les classes utilitaires bootstrap précédées de « qc- »,
 // selon le même principe que pour la grille.
