Fix - correction pour les images de lien externe

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -94,7 +94,7 @@ a {
     img.external-link-img {
       @include external-link-img();
       content:url(#{$img-dir}/external-link.svg?v={{pkg-version}});
-
+      display: inline-block;
     }
   }
 }
