--- a/src/scss/settings/_tokens.scss
+++ b/src/scss/settings/_tokens.scss
@@ -2,7 +2,7 @@
 @use "functions/utils" as *;
 @use "functions/tokens" as *;
 
-$dark-blue : #223654;
+$dark-blue: #223654;
 $xl-tokens: (
     font : (
         family : (
@@ -129,10 +129,48 @@ $xl-tokens: (
         ),
     ),
     spacer: (
+      // base scale
         sm: rem(2 * $base-spacer),
         md: rem(3 * $base-spacer),
         lg: rem(6 * $base-spacer),
         xl: rem(12 * $base-spacer),
+        section : token-value(spacer xl),
+      // prefixes : m -> margin, p -> padding, t -> top, b -> bottom, l -> left, r -> right
+      // mt -> margin top
+        h1: (
+            mt: rem(9 * $base-spacer),
+            mb: rem(4 * $base-spacer),
+        ),
+        h2: (
+            mt: rem(6 * $base-spacer),
+            mb: rem(2 * $base-spacer),
+        ),
+        h3: (
+            mt: rem(3 * $base-spacer),
+            mb: rem(2 * $base-spacer),
+        ),
+        h4: (
+            mt: rem(3 * $base-spacer),
+            mb: rem(1 * $base-spacer),
+        ),
+        h5: (
+            mt: rem(2 * $base-spacer),
+            mb: 0,
+        ),
+        h6: (
+            mt: rem(2 * $base-spacer),
+            mb: 0,
+        ),
+        content-block : (
+            mb: token-value(spacer md),
+        ),
+        list : (
+            pl: rem(4 * $base-spacer),
+            mb: token-value(spacer content-block mb),
+        ),
+        list-item : (
+            mb: token-value(spacer sm),
+        )
     ),
     grid: (
         gutter: 32px,
@@ -163,8 +201,16 @@ $breakpoints-tokens: (
         line-height: (
             h2: rem(32),
             h1: rem(40),
+        ),
+        spacer: (
+          // prefixes : m -> margin, p -> padding, t -> top, b -> bottom, l -> left, r -> right
+          // mt -> margin top
+            h1: (
+                mt: rem(6 * $base-spacer),
+                mb: rem(2 * $base-spacer),
+            )
         )
-    ),
+    )
 ) !default;
 
 
