- ajustement des images de lien externe suite à l'ajout de reset.scss

--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -318,12 +318,12 @@ a:active {
 a .external-link-tail {
   white-space: nowrap;
 }
-a .external-link-tail img.external-link-img {
+a .external-link-img {
   max-height: 1.1rem;
   max-width: 1.1rem;
   margin-bottom: 0.16rem;
-  content: url(../img/external-link.svg?v=1.0.0);
   display: inline-block;
+  content: url(../img/external-link.svg?v=1.0.0);
 }
 
 .qc-code {
