- modification d'une media query dans les tokens.

--- a/src/scss/settings/_tokens.scss
+++ b/src/scss/settings/_tokens.scss
@@ -192,7 +192,7 @@ $xl-tokens: (
 
 $breakpoints-tokens: (
     xl : $xl-tokens,
-    sm : (
+    md : (
         font-size: (
             h3: rem(25),
             h2: rem(28),
