--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -95,15 +95,15 @@
   --qc-spacer-section: var(--qc-spacer-xl);
   --qc-spacer-h1-mt: 7.2rem;
   --qc-spacer-h1-mb: 3.2rem;
-  --qc-spacer-h2-mt: 4.8rem;
+  --qc-spacer-h2-mt: 7.2rem;
   --qc-spacer-h2-mb: 1.6rem;
-  --qc-spacer-h3-mt: 2.4rem;
-  --qc-spacer-h3-mb: 1.6rem;
-  --qc-spacer-h4-mt: 2.4rem;
+  --qc-spacer-h3-mt: 4.8rem;
+  --qc-spacer-h3-mb: 0.8rem;
+  --qc-spacer-h4-mt: 4.8rem;
   --qc-spacer-h4-mb: 0.8rem;
-  --qc-spacer-h5-mt: 1.6rem;
+  --qc-spacer-h5-mt: var(--qc-spacer-md);
   --qc-spacer-h5-mb: 0;
-  --qc-spacer-h6-mt: 1.6rem;
+  --qc-spacer-h6-mt: var(--qc-spacer-md);
   --qc-spacer-h6-mb: 0;
   --qc-spacer-content-block-mb: var(--qc-spacer-md);
   --qc-spacer-list-pl: 3.2rem;
@@ -127,8 +127,8 @@
     --qc-font-size-h1: 3.6rem;
     --qc-line-height-h2: 3.2rem;
     --qc-line-height-h1: 4rem;
-    --qc-spacer-h1-mt: 4.8rem;
-    --qc-spacer-h1-mb: 1.6rem;
+    --qc-spacer-h2-mt: 4.8rem;
+    --qc-spacer-h2-mb: 0.8rem;
   }
 }
 
