--- a/public/css/qc-sdg-design-tokens.css
+++ b/public/css/qc-sdg-design-tokens.css
@@ -87,6 +87,7 @@
   --qc-box-shadow-blur-2: 8px;
   --qc-box-shadow-blur-3: 16px;
   --qc-box-shadow-blur-4: 24px;
+  --qc-spacer-xs: 0.8rem;
   --qc-spacer-sm: 1.6rem;
   --qc-spacer-md: 2.4rem;
   --qc-spacer-lg: 4.8rem;
@@ -95,11 +96,11 @@
   --qc-spacer-h1-mt: 7.2rem;
   --qc-spacer-h1-mb: 3.2rem;
   --qc-spacer-h2-mt: 7.2rem;
-  --qc-spacer-h2-mb: 1.6rem;
-  --qc-spacer-h3-mt: 4.8rem;
-  --qc-spacer-h3-mb: 0.8rem;
-  --qc-spacer-h4-mt: 4.8rem;
-  --qc-spacer-h4-mb: 0.8rem;
+  --qc-spacer-h2-mb: var(--qc-spacer-sm);
+  --qc-spacer-h3-mt: var(--qc-spacer-lg);
+  --qc-spacer-h3-mb: var(--qc-spacer-xs);
+  --qc-spacer-h4-mt: var(--qc-spacer-lg);
+  --qc-spacer-h4-mb: var(--qc-spacer-xs);
   --qc-spacer-h5-mt: var(--qc-spacer-md);
   --qc-spacer-h5-mb: 0;
   --qc-spacer-h6-mt: var(--qc-spacer-md);
