utilisation d'un alias pour bootstrap dans la trousse, afin d'éviter tout problème de nom en cas d'inclusion dans un autre projet qui utiliserait aussi bootstrap. + réorganisation des répertoire/renommages pour la réécriture de bootstrap.

--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -1,5 +1,5 @@
 @use "modules/grid" as *;
-@import "lib/bootstrap/scss/grid";
+@import "modules/bootstrap-rewrite/grid";
 
 // Décommenter ces lignes pour ajouter les classes utilitaires bootstrap précédées de « qc- »,
 // selon le même principe que pour la grille.
