--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -121,6 +121,11 @@
   --qc-grid-container-max-width-lg: 992px;
   --qc-grid-container-max-width-xl: 1200px;
 }
+@media (max-width: 1199.98px) {
+  :root {
+    --qc-grid-gutter: 24px;
+  }
+}
 @media (max-width: 991.98px) {
   :root {
     --qc-font-size-h3: 2.5rem;
@@ -130,6 +135,11 @@
     --qc-line-height-h1: 4rem;
     --qc-spacer-h2-mt: 4.8rem;
     --qc-spacer-h2-mb: 0.8rem;
+  }
+}
+@media (max-width: 767.98px) {
+  :root {
+    --qc-grid-gutter: 16px;
   }
 }
 
@@ -338,8 +348,8 @@ code, .qc-code {
 .qc-container-md,
 .qc-container-sm {
   width: 100%;
-  padding-right: 16px;
-  padding-left: 16px;
+  padding-right: calc(1 * var(--qc-grid-gutter) / 2);
+  padding-left: calc(1 * var(--qc-grid-gutter) / 2);
   margin-right: auto;
   margin-left: auto;
 }
@@ -367,8 +377,8 @@ code, .qc-code {
 .qc-row {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -16px;
-  margin-left: -16px;
+  margin-right: calc(-1 * var(--qc-grid-gutter) / 2);
+  margin-left: calc(-1 * var(--qc-grid-gutter) / 2);
 }
 
 .no-gutters {
@@ -389,8 +399,8 @@ code, .qc-code {
 .qc-col-auto, .qc-col-12, .qc-col-11, .qc-col-10, .qc-col-9, .qc-col-8, .qc-col-7, .qc-col-6, .qc-col-5, .qc-col-4, .qc-col-3, .qc-col-2, .qc-col-1 {
   position: relative;
   width: 100%;
-  padding-right: 16px;
-  padding-left: 16px;
+  padding-right: calc(1 * var(--qc-grid-gutter) / 2);
+  padding-left: calc(1 * var(--qc-grid-gutter) / 2);
 }
 
 .qc-col {
