--- a/src/scss/modules/bootstrap-rewrite/mixins/_grid-framework.scss
+++ b/src/scss/modules/bootstrap-rewrite/mixins/_grid-framework.scss
@@ -8,8 +8,8 @@
   %grid-column {
     position: relative;
     width: 100%;
-    padding-right: $gutter * .5;
-    padding-left: $gutter * .5;
+    padding-right: calc(1 * $gutter / 2);
+    padding-left: calc(1 * $gutter / 2);
   }
 
   @each $breakpoint in map-keys($breakpoints) {
