--- a/src/scss/settings/_tokens.scss
+++ b/src/scss/settings/_tokens.scss
@@ -193,6 +193,11 @@ $xl-tokens: (
 
 $breakpoints-tokens: (
     xl : $xl-tokens,
+    lg : (
+        grid: (
+            gutter: 24px,
+        )
+    ),
     md : (
         font-size: (
             h3: rem(25),
@@ -210,8 +215,13 @@ $breakpoints-tokens: (
                 mt: rem(6 * $base-spacer),
                 mb: rem(1 * $base-spacer),
             )
+        ),
+    ),
+    sm : (
+        grid: (
+            gutter: 16px,
         )
-    )
+    ),
 ) !default;
 
 
