--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Open Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto Mono:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700");
 :root {
   --qc-font-family-roboto: Roboto,sans-serif;
@@ -216,6 +217,7 @@ select {
 body {
   font-size: var(--qc-font-size-md);
   line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-regular);
   font-family: var(--qc-font-family-content);
   background-color: var(--qc-color-white);
   color: var(--qc-color-text-primary);
@@ -287,6 +289,7 @@ h1:after, .qc-h1:after {
 .qc-subhead {
   font-size: var(--qc-font-size-sm);
   line-height: var(--qc-line-height-sm);
+  font-weight: var(--qc-font-weight-regular);
 }
 .qc-subhead + h1, .qc-subhead + h2, .qc-subhead + h3, .qc-subhead + h4, .qc-subhead + h5, .qc-subhead + h6,
 .qc-subhead + .qc-h1, .qc-subhead + .qc-h2, .qc-subhead + .qc-h3, .qc-subhead + .qc-h4, .qc-subhead + .qc-h5, .qc-subhead + .qc-h6 {
@@ -1404,6 +1407,7 @@ figure img {
 figcaption {
   font-size: var(--qc-font-size-sm);
   line-height: var(--qc-line-height-sm);
+  font-weight: var(--qc-font-weight-regular);
   display: table-caption;
   caption-side: bottom;
   background-color: var(--qc-color-grey-pale);
@@ -1414,6 +1418,7 @@ figcaption {
 figcaption p {
   font-size: var(--qc-font-size-sm);
   line-height: var(--qc-line-height-sm);
+  font-weight: var(--qc-font-weight-regular);
 }
 figcaption p:last-child {
   margin-bottom: 0;
@@ -1452,4 +1457,215 @@ ul ul {
 .qc-shading-4 {
   box-shadow: 0 4px 24px var(--qc-box-shadow-color);
 }
-/*# sourceMappingURL=qc-sdg.css.map */
+
+table.qc-table {
+  margin-bottom: 0;
+  background-color: var(--qc-color-white);
+  width: 100%;
+  border-collapse: collapse;
+  /* ----- Striped tables ----- */
+  /* ----- Bordered tables ----- */
+  /* ----- TODO add footer style ----- */
+}
+table.qc-table > thead {
+  background-color: var(--qc-color-blue-dark);
+  color: var(--qc-color-white);
+  border: 1px solid var(--qc-color-blue-dark);
+}
+table.qc-table > thead th {
+  font-size: var(--qc-font-size-md);
+  line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-bold);
+}
+table.qc-table thead th, table.qc-table tbody th, table.qc-table tbody td {
+  vertical-align: middle;
+  text-align: left;
+  padding: var(--qc-spacer-sm);
+}
+table.qc-table.qc-striped tbody tr:nth-of-type(even) {
+  background-color: var(--qc-color-grey-pale);
+}
+table.qc-table.qc-bordered tbody th, table.qc-table.qc-bordered tbody td {
+  border-bottom: 1px solid var(--qc-color-grey-light);
+}
+
+qc-accordion ul, qc-dialog ul, qc-notice ul, qc-section ul, qc-tooltip ul, .qc-component ul {
+  padding-left: 20px; /*TODO vérifier avec Marc, car le spacer du SDG ne correspond pas à ce qui est dans le site du système de design.*/
+}
+
+qc-accordion ul:last-child, qc-dialog ul:last-child, qc-notice ul:last-child, qc-section ul:last-child, qc-tooltip ul:last-child, .qc-component ul:last-child {
+  margin-bottom: 0;
+}
+
+qc-accordion ul li:last-of-type, qc-dialog ul li:last-of-type, qc-notice ul li:last-of-type, qc-section ul li:last-of-type, qc-tooltip ul li:last-of-type, .qc-component ul li:last-of-type {
+  margin-bottom: 0;
+}
+
+qc-accordion p:first-child, qc-dialog p:first-child, qc-notice ul p:first-child, qc-section ul p:first-child, qc-tooltip ul p:first-child, .qc-component p:first-child, .qc-component .contenu p:first-child {
+  margin-top: 0;
+}
+
+qc-accordion p:last-child, qc-dialog p:last-child, qc-notice ul p:last-child, qc-section ul p:last-child, qc-tooltip ul p:last-child, .qc-component p:last-child, .qc-component .contenu p:last-child {
+  margin-bottom: 0;
+}
+
+/* TODO voir si meilleure façon d'intégrer en scss... */
+.qc-icon {
+  display: inline-block;
+  content: "";
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% auto;
+  min-width: 32px;
+  height: 32px;
+  /* Small icons (sm) */
+  /* Medium icons (md) */
+  /* Large icons (lg) */
+}
+.qc-icon.sm {
+  min-width: 12px;
+  height: 12px;
+}
+.qc-icon.md {
+  min-width: 20px;
+  height: 20px;
+}
+.qc-icon.lg {
+  min-width: 40px;
+  height: 40px;
+}
+.qc-icon.warning {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#warning);
+}
+.qc-icon.arrow-up-white {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#arrow-up-white);
+}
+.qc-icon.clipboard {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#clipboard);
+}
+.qc-icon.error {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#error);
+}
+.qc-icon.error-white {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#error-white);
+}
+.qc-icon.information {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#information);
+}
+.qc-icon.information-white {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#information-white);
+}
+.qc-icon.minus {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#minus);
+}
+.qc-icon.plus {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#plus);
+}
+.qc-icon.question-mark {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#question-mark);
+}
+.qc-icon.success {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#success);
+}
+.qc-icon.success-white {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#success-white);
+}
+.qc-icon.xclose-white {
+  width: 16px;
+  height: 16px;
+  min-width: 16px;
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#xclose-white);
+}
+.qc-icon.xclose-blue {
+  width: 16px;
+  height: 16px;
+  min-width: 16px;
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#xclose-blue);
+}
+.qc-icon.chevron-blue, .qc-icon.chevron-white {
+  width: 16px;
+  min-width: 16px;
+  height: 10px;
+}
+.qc-icon.chevron-blue {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#chevron-blue);
+}
+.qc-icon.chevron-white {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#chevron-white);
+}
+.qc-icon.facebook {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#facebook);
+}
+.qc-icon.linkedin {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#linkedin);
+  height: 30px;
+}
+.qc-icon.twitter {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#twitter);
+}
+.qc-icon.youtube {
+  background-image: url(../img/qc-sprite.svg?v=1.0.0#youtube);
+}
+
+.qc-notice {
+  display: flex;
+  border: 1px solid var(--qc-color-grey-light);
+  background-color: var(--qc-color-white);
+  word-break: break-word;
+  font-size: var(--qc-font-size-sm);
+  line-height: var(--qc-line-height-sm);
+  font-weight: var(--qc-font-weight-regular);
+  margin-bottom: 3.2rem;
+  /*TODO Quelle est la marge entre le titre et le texte? Rien de spécifié dans le SDG. */
+}
+.qc-notice .icon-container {
+  display: flex;
+  padding: var(--qc-spacer-md) var(--qc-spacer-xs);
+  background-color: var(--qc-color-blue-pale);
+}
+.qc-notice .icon-container .qc-icon {
+  background-size: 100% auto;
+  min-width: var(--qc-spacer-md);
+  height: var(--qc-spacer-md);
+}
+.qc-notice.information .icon-container {
+  background-color: var(--qc-color-blue-pale);
+}
+.qc-notice.warning .icon-container {
+  background-color: var(--qc-color-yellow-pale);
+}
+.qc-notice.success .icon-container {
+  background-color: var(--qc-color-green-pale);
+}
+.qc-notice.error .icon-container {
+  background-color: var(--qc-color-pink-pale);
+}
+.qc-notice .title {
+  margin: 0 0 var(--qc-spacer-xs) 0;
+  padding: 0;
+  font-size: var(--qc-font-size-sm);
+  line-height: var(--qc-line-height-sm);
+  font-weight: var(--qc-font-weight-bold);
+  font-family: var(--qc-font-family-content);
+}
+.qc-notice .content {
+  padding: var(--qc-spacer-md) 3.2rem var(--qc-spacer-md) var(--qc-spacer-sm);
+  width: 100%;
+}
+.qc-notice .content:last-child {
+  margin-bottom: 0;
+}
+
+/* Links in a error notice (eg. error summary) */
+qc-notice[type=error] ul li a {
+  color: var(--qc-color-red-regular);
+}
+qc-notice[type=error] ul li a:hover, qc-notice[type=error] ul li a:focus {
+  text-decoration: none;
+}
+
+@media (max-width: 575.98px) {
+  .qc-notice .content {
+    padding: var(--qc-spacer-md) var(--qc-spacer-md) var(--qc-spacer-md) var(--qc-spacer-sm);
+  }
+}
