--- a/src/scss/qc-sdg.scss
+++ b/src/scss/qc-sdg.scss
@@ -7,3 +7,7 @@
 @use "lists" as *;
 @use "fonts" as *;
 @use "shadings" as *;
+@use "tables" as *;
+@use "./components/common" as *;
+@use "./components/icons" as *;
+@use "./components/notice" as *;
