--- a/src/scss/modules/_utils.scss
+++ b/src/scss/modules/_utils.scss
@@ -5,12 +5,13 @@
 
 // typography
 
-// toujours utiliser ces mixins pour la déclarations des tailles de police:
+// toujours utiliser ces mixins pour la déclarations des tailles de police:  /*TODO Un commentaire en anglais!!!!*/
 // cela garantit que la taille police est conforme aux exigences du SDG
 // et ajoute automatiquement le bon interlignage
-@mixin content-font($scale) {
-  font-size: token-value(font size $scale) ;
-  line-height: token-value(line-height $scale) ;
+@mixin content-font($scale: 'md', $weight: 'regular') {
+  font-size: token-value(font size $scale);
+  line-height: token-value(line-height $scale);
+  font-weight: token-value(font weight $weight);
 }
 
 @mixin header-font($header) {
